fleet/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: great-chat
  namespace: arpansahu-one-namespace
  labels:
    app: great-chat
    app.kubernetes.io/instance: great-chat
    app.kubernetes.io/name: great-chat
spec:
  selector:
    matchLabels:
      app: great-chat
  replicas: 1
  template:
    metadata:
      labels:
        app: great-chat
        app.kubernetes.io/instance: great-chat
        app.kubernetes.io/name: great-chat
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: great-chat
        image: harbor.arpansahu.me/library/great_chat:latest
        ports:
        - containerPort: 8002
        volumeMounts:
        - name: great-chat
          mountPath: /app/data
      volumes:
      - name: great-chat
        persistentVolumeClaim:
          claimName: great-chat
---
apiVersion: v1
kind: Service
metadata:
  name: great-chat
  namespace: arpansahu-one-namespace
  labels:
    app: great-chat
    app.kubernetes.io/instance: great-chat
    app.kubernetes.io/name: great-chat
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app: great-chat
