fleet/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: great-chat-service
  namespace: arpansahu-one-namespace
  labels:
    app: great-chat
    app.kubernetes.io/instance: great-chat
    app.kubernetes.io/name: great-chat
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app: great-chat
